--- a/manifest.json
+++ b/manifest.json
@@ -1,19 +1,21 @@
 {
-    "manifest_version": 3,
-    "name": "samarth",
-    "version": "1.0",
-    "description": "Floating AI assistant for summarizing webpages and answering queries.",
-    "permissions": ["scripting", "storage", "activeTab"],
-    "host_permissions": ["<all_urls>"],
-    "background": {
+  "manifest_version": 3,
+  "name": "samarth",
+  "version": "1.0",
+  "description": "Floating AI assistant for summarizing webpages and answering queries.",
+  "permissions": ["scripting", "storage", "activeTab"],
+  "host_permissions": ["<all_urls>"],
+  "background": {
       "service_worker": "background.js"
-    },
-    "content_scripts": [
+  },
+  "content_scripts": [
       {
-        "matches": ["<all_urls>"],
-        "js": ["content.js"],
-        "css": ["pop.css"]
+          "matches": ["<all_urls>"],
+          "js": ["content.js"],
+          "css": ["pop.css"]
       }
-    ]
+  ],
+  "action": {
+      "default_popup": "pop.html"
   }
-  
+}
